renamed:    style.css -> index.css 	renamed:    Main2.html -> index.html 	renamed:    my.js -> index.js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <title>Main2</title>
 
-  <script src="my.js" defer></script>
-  <link href="style.css" rel="stylesheet">
+  <script src="index.js" defer></script>
+  <link href="index.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap" rel="stylesheet">
