modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1>Чеки</h1>
   <span class="div-hide"></span>
-  <div>
+  <div class="form">
     <label for="num">Укажите сумму чека</label>
     <input type="text" id="num" name="num" min="0">
     <button class="btn1">Добавить</button>
